# au-6-6-hacspec

./: .gitignore  Cargo.toml  Hacspec_Schnorr_Sig_Secp256k1_Sha256.v  Readme.md
coq/: .CoqMakefile.d  _CoqProject
coq/src/: Hacspec_Lib.v  Hacspec_Schnorr_Sig_Secp256k1_Sha256.v  Hacspec_Secp256k1.v
doc/coq/: Hacspec_Secp256k1.html  index.html
doc/hacspec/: crates.js  source-files.js
doc/hacspec/env_logger/: constant.DEFAULT_WRITE_STYLE_ENV.html  fn.builder.html  fn.init.html  struct.Logger.html
doc/hacspec/hacspec_aes/: struct.Block.html  struct.Bytes176.html  struct.Key128.html  struct.RCon.html  struct.RoundKey.html  struct.Word.html
doc/hacspec/hacspec_attributes/: all.html  sidebar-items.js
doc/hacspec/hacspec_gimli/: struct.Digest.html  (+2 more)
docs/: index.md
docs/coq/: Hacspec_Schnorr_Sig_Secp256k1_Sha256.html  Hacspec_Secp256k1.html  coqdoc.css  toc.html
docs/hacspec/: crates.js  search-index.js  settings.html  source-files.js
examples/schnorr-sig-p256-sha256/: Cargo.toml
examples/schnorr-sig-p256-sha256/src/: lib.rs
examples/schnorr-sig-secp256k1-sha256/: Cargo.toml
examples/schnorr-sig-secp256k1-sha256/src/: schnorr-sig-secp256k1-sha256.rs
examples/schnorr-sig-secp256k1-sha256/tests/: test_schnorr-sig-secp256k1-sha256.rs
examples/secp256k1/: Cargo.toml
fstar/: Hacspec..Chacha20.Poly1305.fst  Hacspec..Chacha20.fst  Hacspec..Curve25519.fst  Hacspec..Hkdf.fst  Hacspec..Hmac.fst  Hacspec..Ntru.Prime.fst  Hacspec..P256.fst  Hacspec..Poly1305.fst  Hacspec..Riot..Bootloader.fst  Hacspec..Riot..Runqueue.fst  Hacspec..Sha256.fst  Hacspec..Sha3.fst
(+10918 files in other folders)
