[package]
name = "hacspec-schnorr-sig-p256-sha256"
version = "0.1.0"
authors = ["Viktor Salling <201906430@post.au.dk>", "Mads Overgård Henningsen <201906515@post.au.dk>"]
edition = "2018"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hacspec-lib = { path = "../../lib" }
hacspec-p256 = { path = "../p256" }
hacspec-sha256 = { path = "../sha256" }