[package]
name = "hacspec-schnorr-sig-secp256k1-sha256"
version = "0.1.0"
authors = ["Viktor Salling <201906430@post.au.dk>", "Mads Overgård Henningsen <201906515@post.au.dk>"]
edition = "2018"

[lib]
path = "src/schnorr-sig-secp256k1-sha256.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hacspec-lib = { path = "../../lib" }
hacspec-secp256k1 = { path = "../secp256k1" }
hacspec-sha256 = { path = "../sha256" }

[dev-dependencies]
hacspec-dev = { path = "../../utils/dev" }
quickcheck = "1"
quickcheck_macros = "1"